# atinyvectors

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  build.sh  build_run_test.sh  dockerbuild.sh  install_dependency.sh  install_faiss.sh
atinyvectors_dev/: CMakeLists.txt  Dockerfile  LICENSE  README.md  build_run_test.sh  dockerbuild.sh
atinyvectors_dev/capi/: atinyvectors_c_api.cpp
atinyvectors_dev/include/: Space.hpp  VectorIndex.hpp  VectorMetadata.hpp
atinyvectors_dev/include/algo/: HnswIndexLRUCache.hpp
atinyvectors_dev/src/impl/: ConfigImpl.cpp  SpaceImpl.cpp  VectorIndexImpl.cpp
atinyvectors_dev/src/impl/dto/: SearchDTOImpl.cpp
atinyvectors_dev/tests/: ConfigTest.cpp  SearchTest.cpp  VectorIndexTest.cpp
atinyvectors_dev/tests/dto/: SearchDTOTest.cpp  SpaceDTOTest.cpp  VersionDTOTest.cpp
capi/: atinyvectors_c_api.cpp  atinyvectors_c_api.h  atinyvectors_idcache.cpp  atinyvectors_rbac_c_api.cpp  atinyvectors_rerank_c_api.cpp  atinyvectors_search_c_api.cpp  atinyvectors_snapshot_c_api.cpp  atinyvectors_space_c_api.cpp  atinyvectors_vector_c_api.cpp  atinyvectors_version_c_api.cpp
db/: migration_1.sql  migration_2.sql  migration_3.sql  reset.sql
include/: BM25.hpp  Config.hpp  DatabaseManager.hpp  ErrorCode.hpp  IdCache.hpp  RbacToken.hpp  Snapshot.hpp  Space.hpp  SparseDataPool.hpp  ValueType.hpp  Vector.hpp  VectorIndex.hpp  VectorIndexOptimizer.hpp  VectorMetadata.hpp  Version.hpp
include/algo/: FaissIndexLRUCache.hpp  FaissIndexManager.hpp  HnswIndexLRUCache.hpp  HnswIndexManager.hpp  SparseIpSpace.hpp  SparseL2Space.hpp
include/dto/: RbacTokenDTO.hpp  SearchDTO.hpp  SnapshotDTO.hpp  SpaceDTO.hpp  VectorDTO.hpp  VersionDTO.hpp
include/filter/: FilterManager.hpp  SQLBuilderVisitor.hpp
include/service/: BM25Service.hpp  RbacTokenService.hpp  RerankService.hpp  SearchService.hpp  SnapshotService.hpp  SpaceService.hpp  VectorService.hpp  VersionService.hpp
include/utils/: Utils.hpp
mockdb/: migration_1.sql  migration_3.sql
parser/: Plan.g4  Plan.interp  Plan.tokens  PlanBaseVisitor.h  PlanLexer.cpp  PlanLexer.h  PlanLexer.interp  PlanParser.cpp  PlanParser.h  PlanVisitor.h  gen.sh
src/impl/: BM25Impl.cpp  ConfigImpl.cpp  DatabaseManagerImpl.cpp  IdCacheImpl.cpp  RbacTokenImpl.cpp  SnapshotImpl.cpp  SpaceImpl.cpp  SparseDataPoolImpl.cpp  VectorIndexImpl.cpp  VectorIndexOptimizerImpl.cpp  VectorManagerImpl.cpp  VectorMetadataImpl.cpp  VectorValueImpl.cpp  VersionImpl.cpp
src/impl/algo/: FaissIndexLRUCacheImpl.cpp  FaissIndexManagerImpl.cpp  HnswIndexLRUCacheImpl.cpp  HnswIndexManagerImpl.cpp  SparseSpaceImpl.cpp
src/impl/dto/: RbacTokenDTOImpl.cpp  SearchDTOImpl.cpp  SnapshotDTOImpl.cpp  SpaceDTOImpl.cpp  VectorDTOImpl.cpp  VersionDTOImpl.cpp
src/impl/filter/: FilterManager.cpp  SQLBuilderVisitor.cpp
src/impl/service/: BM25ServiceImpl.cpp  RbacTokenServiceImpl.cpp  RerankServiceImpl.cpp  SearchServiceImpl.cpp  SnapshotServiceImpl.cpp  SpaceServiceImpl.cpp  VectorServiceImpl.cpp  VersionServiceImpl.cpp
src/impl/utils/: UtilsImpl.cpp
tests/: BM25Test.cpp  ConfigTest.cpp  DatabaseManagerTest.cpp  IdCacheTest.cpp  RbacTokenTest.cpp  SearchTest.cpp  SnapshotTest.cpp  SpaceTest.cpp  VectorIndexOptimizerTest.cpp  VectorIndexTest.cpp  VectorMetadataTest.cpp  VectorTest.cpp  VersionTest.cpp
tests/algo/: FaissIndexLRUCacheTest.cpp  FaissIndexManagerTest.cpp  HnswIndexLRUCacheTest.cpp  HnswIndexManagerTest.cpp  HnswLibTest.cpp  SparseIpSpaceTest.cpp  SparseL2SpaceTest.cpp
tests/capi/: atinyvectors_c_api_spacedto_test.cpp
tests/dto/: RbacTokenDTOTest.cpp  SearchDTOTest.cpp  SnapshotDTOTest.cpp  SpaceDTOTest.cpp  VectorDTOTest.cpp  VersionDTOTest.cpp
tests/filter/: FilterManagerTest.cpp  SQLBuilderVisitorTest.cpp
tests/service/: BM25ServiceTest.cpp  RbacTokenServiceTest.cpp  RerankServiceTest.cpp  SearchServiceTest.cpp  SnapshotServiceTest.cpp  SpaceServiceTest.cpp  VectorServiceTest.cpp  VersionServiceTest.cpp
